--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "react01",
   "main": "index.js",
   "scripts": {
+    "start": "some command to be run",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
